[build-system]
requires = ["poetry>=0.12"]

[tool.poetry]
name = "flaskauth"
version = "0.0.1"
description = ""
authors = ["Dan Jones"]

[tool.poetry.dependencies]
flask = "*"
oic = "*"
pyjwt = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = { version = "*", allow-prereleases = true }
pytest-black = "*"
pytest-env = "*"
pytest-flake8 = "*"
pytest-isort = "*"
pytest-mock = "*"
jsonlogger = {path = "../json-logger"}
requests-mock = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --cov=cybersecuritytools --cov-report=term --cov-report=html --doctest-modules --flake8 --mypy -vv"
testpaths = [
    "flaskauth",
]